--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node src/server-start.js",
     "build": "ng build",
+    "start-express": "node src/server-start.js",
+    "start-ng": "ng serve",
+    "start": "concurrently \"npm run start-ng\" \"npm run start-express\"",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -12,7 +14,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.0",
-    "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
     "@angular/cli": "~6.0.0",
+    "@angular/common": "^6.0.1",
     "@angular/compiler-cli": "^6.0.0",
     "@angular/language-service": "^6.0.0",
     "@types/jasmine": "~2.8.6",
@@ -43,6 +45,7 @@
     "body-parser": "^1.18.2",
     "codelyzer": "~4.2.1",
     "compression": "^1.7.2",
+    "concurrently": "^3.5.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
