--- a/package.json
+++ b/package.json
@@ -1,17 +1,39 @@
 {
-  "name": "feenr-mean",
-  "version": "0.0.0",
+  "name": "mean-octotrails-starter",
+  "version": "0.0.1",
+  "description": "oSoc18 Octotrails project boilerplate",
+  "author": "Dakad",
+  "keywords": [
+    "angular",
+    "angular2",
+    "angular4",
+    "api",
+    "express",
+    "rest",
+    "webapp"
+  ],
   "scripts": {
     "ng": "ng",
     "build": "ng build",
-    "start-express": "node src/server-start.js",
-    "start-ng": "ng serve --host 0.0.0.0",
-    "start": "concurrently \"npm run start-ng\" \"npm run start-express\"",
+    "start:express": "node src/server-start.js",
+    "start:ng": "ng serve --host 0.0.0.0",
+    "start:prod": "NODE_ENV=production nodemon src/server-start.js",
+    "start": "concurrently \"npm run start:ng\" \"npm run start:express\"",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "babel": {
+    "presets": [
+      "es2015",
+      "es2017"
+    ],
+    "plugins": [
+      "transform-es2015-destructuring",
+      "transform-object-rest-spread",
+      "syntax-async-functions"
+    ]
+  },
   "dependencies": {
     "@angular/animations": "^6.0.0",
     "@angular/cdk": "^6.2.0",
@@ -23,9 +45,25 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "app-root-path": "^2.0.1",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
+    "body-parser": "^1.18.2",
+    "compression": "^1.7.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.5.4",
+    "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
+    "express-validation": "^1.0.2",
+    "helmet": "^3.12.0",
+    "http-status": "^1.1.0",
+    "joi": "^13.3.0",
+    "jsonwebtoken": "^8.3.0",
+    "method-override": "^2.3.10",
+    "nodemon": "^1.17.5",
+    "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
@@ -38,35 +76,22 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "app-root-path": "^2.0.1",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
-    "body-parser": "^1.18.2",
     "codelyzer": "~4.2.1",
-    "compression": "^1.7.2",
     "concurrently": "^3.5.1",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
-    "dotenv": "^5.0.1",
-    "express": "^4.16.3",
-    "express-validation": "^1.0.2",
-    "helmet": "^3.12.0",
-    "http-status": "^1.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "joi": "^13.3.0",
-    "karma": "~1.7.1",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "method-override": "^2.3.10",
     "mongoose": "^5.1.0",
-    "path": "^0.12.7",
-    "protractor": "~5.3.0",
+    "protractor": "^5.3.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
