--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "mongoose": "^5.1.0",
+    "node-sass": "^4.9.2",
     "nodemon": "^1.17.5",
     "protractor": "^5.3.2",
     "ts-node": "~5.0.1",
