--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@
 # JWT_SECRET = 0a6b944d-d2fb-46fc-a85e-0295c986cd9f
 # MONGO_HOST = mongodb://localhost:27017/mean
 # MONGO_PORT = 27017
+SERVER_PORT = 8081
+MONGO_HOST=mongodb://test-octotrails123:test-octotrails123@ds231941.mlab.com:31941/mean-octotrails-starter
+MONGO_PORT=18708
