--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "babel-preset-es2017": "^6.24.1",
     "codelyzer": "~4.2.1",
     "concurrently": "^3.5.1",
+    "express-debug": "^1.1.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^2.0.4",
