--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@
 # MONGO_HOST = mongodb://localhost:27017/mean
 # MONGO_PORT = 27017
 SERVER_PORT = 8081
-MONGO_HOST=mongodb://test-octotrails123:test-octotrails123@ds231941.mlab.com:31941/mean-octotrails-starter
-MONGO_PORT=18708
+STIB_API = https://proxy.sulliops.co/index.php?http://detobel36.ddns.net/files/osoc/
+
