Feature/1 searchdata backend (#48)
* Add route for search

* Add search function in stop controller

* Add express-debug package

* Edit route for search

* Edit stops controlller API

* Edit .gitignore for .env file

* Edit .env file with STIB API

* Ajust .env file

* Add error handler in the controller

* Add validation of params in routes and controller

* Correct validation in controller

* Edit controller validation

--- a/.env
+++ b/.env
@@ -6,6 +6,9 @@
 # JWT_SECRET = 0a6b944d-d2fb-46fc-a85e-0295c986cd9f
 # MONGO_HOST = mongodb://localhost:27017/mean
 # MONGO_PORT = 27017
+# STIB_API = https://proxy.sulliops.co/index.php?http://detobel36.ddns.net/files/osoc/
+
 SERVER_PORT = 8081
 MONGO_HOST=mongodb://test-octotrails123:test-octotrails123@ds231941.mlab.com:31941/mean-octotrails-starter
 MONGO_PORT=18708
+STIB_API = https://proxy.sulliops.co/index.php?http://detobel36.ddns.net/files/osoc/
