--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
-    "express-validation": "^1.0.2",
+    "express-validator": "^5.2.0",
     "helmet": "^3.12.0",
     "http-status": "^1.1.0",
     "joi": "^13.3.0",
