--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "express-async-handler": "^1.1.3",
     "express-jwt": "^5.3.1",
     "express-validator": "^5.2.0",
     "helmet": "^3.12.0",
