--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@angular/pwa": "^0.6.8",
     "@angular/router": "^6.0.7",
     "@angular/service-worker": "^6.0.0",
+    "@types/mapbox-gl": "^0.45.2",
     "app-root-path": "^2.0.1",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
@@ -79,6 +80,7 @@
     "http-status": "^1.1.0",
     "joi": "^13.3.0",
     "jsonwebtoken": "^8.3.0",
+    "mapbox-gl": "^0.47.0-beta.1",
     "method-override": "^2.3.10",
     "path": "^0.12.7",
     "pm2": "^3.0.0",
