--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "express": "^4.16.3",
     "express-async-handler": "^1.1.3",
     "express-jwt": "^5.3.1",
+    "express-validation": "^1.0.2",
+    "hammerjs": "^2.0.8",
     "express-validator": "^5.2.0",
     "helmet": "^3.12.0",
     "http-status": "^1.1.0",
@@ -119,6 +121,6 @@
     "protractor": "^5.3.2",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "^2.7.2"
   }
 }
