--- a/angular.json
+++ b/angular.json
@@ -4,7 +4,7 @@
   "newProjectRoot": "projects",
   "projects": {
     "tour-of-heroes": {
-      "root": "",
+      "root": "src/web-app",
       "sourceRoot": "src/web-app",
       "projectType": "application",
       "prefix": "app",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/",
+            "outputPath": "src/web-app/dist/",
             "index": "src/web-app/index.html",
             "main": "src/web-app/main.ts",
             "polyfills": "src/web-app/polyfills.ts",
