--- a/src/web-app/manifest.json
+++ b/src/web-app/manifest.json
@@ -1,9 +1,10 @@
 {
-  "name": "tour-of-heroes",
-  "short_name": "tour-of-heroes",
-  "theme_color": "#1976d2",
-  "background_color": "#fafafa",
-  "display": "standalone",
+  "name": "octotrails-qControl",
+  "short_name": "qControl",
+  "theme_color": "#2196f3",
+  "background_color": "#2196f3",
+  "display": "fullscreen",
+  "orientation": "portrait",
   "scope": "/",
   "start_url": "/",
   "icons": [
