--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "ng": "ng",
-    "build": "ng build",
+    "build": "ng build --prod --build-optimizer --ngsw-config-path ./src/web-app/ngsw-config.json --output-path src/web-api/public/",
     "start:server": "nodemon src/server-start.js",
     "start:ng": "ng serve --host 0.0.0.0",
     "start:prod": "NODE_ENV=production pm2 start src/server-start.js -i max",
@@ -83,6 +83,7 @@
     "joi": "^13.3.0",
     "jsonwebtoken": "^8.3.0",
     "mapbox-gl": "^0.47.0-beta.1",
+    "mongoose": "^5.1.0",
     "method-override": "^2.3.10",
     "path": "^0.12.7",
     "pm2": "^3.0.0",
@@ -116,7 +117,6 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "mongoose": "^5.1.0",
     "node-sass": "^4.9.2",
     "nodemon": "^1.17.5",
     "protractor": "^5.3.2",
