Use node harmony instead of Babel polyfill

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "build": "ng build --prod --build-optimizer --ngsw-config-path ./src/web-app/ngsw-config.json --output-path src/web-api/public/",
     "start:server": "nodemon src/server-start.js",
     "start:ng": "ng serve --host 0.0.0.0",
-    "start:prod": "NODE_ENV=production pm2 start src/server-start.js -i max",
-    "pwa": "ng build --prod && sw-precache --root=src/web-app/dist --config=precache-config.js",
+    "start:prod": "NODE_ENV=production pm2 start src/server-start.js --name octotrails -i max --node-args=\"--max_old_space_size=500 --harmony\"  ",
     "start": "concurrently \"npm run start:ng\" \"npm run start:server\"",
+    "pwa": "ng build --prod && sw-precache --root=src/web-app/dist --config=precache-config.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -47,7 +47,7 @@
     "delay": "2500",
     "restartable": "rs",
     "execMap": {
-      "js": "node"
+      "js": "node --harmony"
     },
     "ext": "js json"
   },
