--- a/src/web-app/manifest.json
+++ b/src/web-app/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "octotrails-qControl",
-  "short_name": "qControl",
-  "theme_color": "#2196f3",
-  "background_color": "#2196f3",
-  "display": "fullscreen",
+  "name": "QControl",
+  "short_name": "QControl",
+  "theme_color": "#0a1866",
+  "background_color": "#0a1866",
+  "display": "standalone",
   "orientation": "portrait",
   "scope": "/",
   "start_url": "/",
